moronico.output
Gramática

    0 $accept: programa $end

    1 programa: definicion_programa
    2         | definicion_paquete

    3 definicion_programa: PROGRAMA nombre ';' bloque_programa
    4                    | error ';'

    5 nombre: id_op IDENTIFICADOR

    6 id_op: /* vacío */
    7      | id_op IDENTIFICADOR CUATRO_PTOS

    8 bloque_programa: declaracion_cargas declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones
    9                | error ';'

   10 bloque_instrucciones: '{' instruccion_unoomas '}'
   11                     | '{' error '}'

   12 instruccion_unoomas: instruccion_unoomas instruccion
   13                    | instruccion

   14 definicion_paquete: PAQUETE nombre ';' seccion_cabecera seccion_cuerpo

   15 seccion_cabecera: CABECERA declaracion_cargas declaracion_tipos declaracion_constantes declaracion_variables declaracion_interfaces

   16 seccion_cuerpo: CUERPO declaracion_tipos declaracion_constantes declaracion_variables declaracion_subprograma

   17 declaracion_cargas: /* vacío */
   18                   | CARGA declaracion_carga ';'

   19 declaracion_carga: nombre en_path_op nombres_op
   20                  | declaracion_carga ',' nombre en_path_op nombres_op

   21 en_path_op: /* vacío */
   22           | EN PATH

   23 nombres_op: /* vacío */
   24           | '(' nombres_comas ')'
   25           | '(' error ')'

   26 nombres_comas: nombres_comas ',' nombre
   27              | nombre

   28 declaracion_tipos: /* vacío */
   29                  | TIPO declaracion_tipo_unoomas

   30 declaracion_tipo_unoomas: declaracion_tipo_unoomas declaracion_tipo
   31                         | declaracion_tipo

   32 declaracion_tipo: nombre '=' tipo_no_estructurado_o_nombre_tipo ';'
   33                 | nombre '=' tipo_estructurado

   34 tipo_no_estructurado_o_nombre_tipo: nombre
   35                                   | tipo_escalar
   36                                   | tipo_fichero
   37                                   | tipo_enumerado
   38                                   | tipo_lista
   39                                   | tipo_lista_asociativa
   40                                   | tipo_conjunto

   41 tipo_estructurado: tipo_registro
   42                  | declaracion_clase

   43 tipo_escalar: ENTERO
   44             | REAL
   45             | BOOLEANO
   46             | CARACTER
   47             | CADENA

   48 tipo_fichero: FICHERO

   49 tipo_enumerado: '(' expresion_constante_unoomas ')'
   50               | '(' error ')'

   51 expresion_constante_unoomas: expresion_constante
   52                            | expresion_constante_unoomas ',' expresion_constante

   53 tipo_lista: LISTA rango_lista_op DE tipo_no_estructurado_o_nombre_tipo

   54 rango_lista_op: /* vacío */
   55               | '[' rango_lista ']'

   56 rango_lista: rango_lista ',' rango
   57            | rango

   58 rango: expresion DOS_PTOS expresion
   59      | expresion DOS_PTOS expresion DOS_PTOS expresion

   60 tipo_lista_asociativa: LISTA ASOCIATIVA DE tipo_no_estructurado_o_nombre_tipo

   61 tipo_conjunto: CONJUNTO DE tipo_no_estructurado_o_nombre_tipo

   62 tipo_registro: REGISTRO '{' declaracion_campo '}'
   63              | '{' error '}'

   64 declaracion_campo: declaracion_campo nombres_comas ':' tipo_no_estructurado_o_nombre_tipo ';'
   65                  | nombres_comas ':' tipo_no_estructurado_o_nombre_tipo ';'

   66 declaracion_constantes: /* vacío */
   67                       | CONSTANTE declaracion_constante_unoomas

   68 declaracion_constante_unoomas: declaracion_constante_unoomas declaracion_constante
   69                              | declaracion_constante

   70 declaracion_constante: nombre ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'

   71 valor_constante: expresion
   72                | '[' valor_constante_comas ']'
   73                | '[' clave_valor ']'
   74                | '[' campo_valor ']'
   75                | '[' error ']'

   76 valor_constante_comas: valor_constante_comas ',' valor_constante
   77                      | valor_constante

   78 clave_valor: clave_valor ',' CTC_CADENA FLECHA_DOBLE valor_constante
   79            | CTC_CADENA FLECHA_DOBLE valor_constante

   80 campo_valor: campo_valor ',' nombre FLECHA_DOBLE valor_constante
   81            | nombre FLECHA_DOBLE valor_constante

   82 declaracion_variables: /* vacío */
   83                      | VARIABLE declaracion_variable

   84 declaracion_variable: declaracion_variable nombres_comas ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'
   85                     | declaracion_variable nombres_comas ':' tipo_no_estructurado_o_nombre_tipo ';'
   86                     | nombres_comas ':' tipo_no_estructurado_o_nombre_tipo '=' valor_constante ';'
   87                     | nombres_comas ':' tipo_no_estructurado_o_nombre_tipo ';'
   88                     | nombres_comas ':' error '=' valor_constante ';'
   89                     | nombres_comas ':' error ';'

   90 declaracion_interfaces: INTERFAZ cabecera_subprograma_unoomas_ptocoma

   91 declaracion_clase: declaracion_clase_mod
   92                  | declaracion_clase_nomod

   93 declaracion_clase_mod: CLASE FINAL '{' declaraciones_publicas declaraciones_semi declaraciones_privadas '}'
   94                      | CLASE FINAL '(' nombres_comas ')' '{' declaraciones_publicas declaraciones_semi declaraciones_privadas '}'

   95 declaracion_clase_nomod: CLASE '(' nombres_comas ')' '{' declaraciones_publicas declaraciones_semi declaraciones_privadas '}'
   96                        | CLASE '{' declaraciones_publicas declaraciones_semi declaraciones_privadas '}'

   97 declaraciones_publicas: PUBLICO declaracion_componente_unoomas
   98                       | declaracion_componente_unoomas

   99 declaraciones_semi: /* vacío */
  100                   | SEMIPUBLICO declaracion_componente_unoomas

  101 declaraciones_privadas: /* vacío */
  102                       | PRIVADO declaracion_componente_unoomas

  103 declaracion_componente_unoomas: declaracion_componente
  104                               | declaracion_componente_unoomas declaracion_componente

  105 declaracion_componente: declaracion_tipo_anidado
  106                       | declaracion_constante_anidada
  107                       | declaracion_atributos
  108                       | cabecera_subprograma ';' modificadores ';'
  109                       | cabecera_subprograma ';'

  110 declaracion_tipo_anidado: TIPO declaracion_tipo

  111 declaracion_constante_anidada: CONSTANTE declaracion_constante

  112 declaracion_atributos: nombres_comas ':' tipo_no_estructurado_o_nombre_tipo ';'

  113 modificadores: modificador_comas

  114 modificador_comas: modificador_comas ',' modificador
  115                  | modificador

  116 modificador: GENERICO
  117            | ABSTRACTO
  118            | ESPECIFICO
  119            | FINAL

  120 declaracion_subprograma: declaracion_subprograma cabecera_subprograma bloque_subprograma
  121                        | cabecera_subprograma bloque_subprograma

  122 cabecera_subprograma: cabecera_funcion
  123                     | cabecera_procedimiento
  124                     | cabecera_constructor
  125                     | cabecera_destructor

  126 cabecera_subprograma_unoomas_ptocoma: cabecera_subprograma_unoomas_ptocoma cabecera_subprograma ';'
  127                                     | cabecera_subprograma ';'

  128 cabecera_funcion: FUNCION nombre declaracion_parametros FLECHA_DOBLE tipo_no_estructurado_o_nombre_tipo

  129 cabecera_procedimiento: PROCEDIMIENTO nombre declaracion_parametros

  130 cabecera_constructor: CONSTRUCTOR nombre declaracion_parametros

  131 cabecera_destructor: DESTRUCTOR nombre

  132 declaracion_parametros: /* vacío */
  133                       | '(' lista_parametros_formales ')'

  134 lista_parametros_formales: parametros_formales
  135                          | lista_parametros_formales ';' parametros_formales

  136 parametros_formales: nombres_comas ':' tipo_no_estructurado_o_nombre_tipo MODIFICABLE
  137                    | nombres_comas ':' tipo_no_estructurado_o_nombre_tipo

  138 bloque_subprograma: declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones

  139 instruccion: ';'
  140            | instruccion_asignacion
  141            | instruccion_salir
  142            | instruccion_devolver
  143            | instruccion_llamada
  144            | instruccion_si
  145            | instruccion_casos
  146            | instruccion_bucle
  147            | instruccion_probar_excepto
  148            | instruccion_lanzar

  149 instruccion_asignacion: objeto '=' expresion ';'

  150 instruccion_salir: SALIR SI expresion ';'
  151                  | SALIR ';'

  152 instruccion_devolver: DEVOLVER expresion ';'
  153                     | DEVOLVER ';'

  154 instruccion_llamada: llamada_subprograma ';'

  155 llamada_subprograma: nombre '(' expresion_comas ')' nombre '(' ')'

  156 expresion_comas: expresion_comas ',' expresion
  157                | expresion

  158 instruccion_si: SI expresion ENTONCES bloque_instrucciones SINO bloque_instrucciones
  159               | SI expresion ENTONCES bloque_instrucciones

  160 instruccion_casos: EN CASO expresion SEA caso ';'

  161 caso: caso entradas FLECHA_DOBLE bloque_instrucciones
  162     | entradas FLECHA_DOBLE bloque_instrucciones

  163 entradas: entrada_op entrada

  164 entrada_op: /* vacío */
  165           | entrada_op entrada '|'

  166 entrada: expresion
  167        | rango
  168        | OTRO

  169 instruccion_bucle: clausula_iteracion bloque_instrucciones

  170 clausula_iteracion: PARA nombre EN objeto
  171                   | REPITE ELEMENTO nombre EN rango DESCENDENTE
  172                   | REPITE ELEMENTO nombre EN rango
  173                   | MIENTRAS expresion
  174                   | REPITE HASTA expresion

  175 instruccion_probar_excepto: PROBAR bloque_instrucciones EXCEPTO clausula_excepcion FINALMENTE bloque_instrucciones
  176                           | PROBAR bloque_instrucciones EXCEPTO clausula_excepcion

  177 clausula_excepcion: clausula_excepcion CUANDO nombre EJECUTA bloque_instrucciones
  178                   | CUANDO nombre EJECUTA bloque_instrucciones

  179 instruccion_lanzar: LANZAR nombre ';'

  180 objeto: nombre
  181       | objeto '[' expresion_comas ']'
  182       | objeto '.' IDENTIFICADOR

  183 expresion_constante: CTC_ENTERA
  184                    | CTC_REAL
  185                    | CTC_CADENA
  186                    | CTC_CARACTER
  187                    | CTC_BOOLEANA

  188 expresion_primaria: expresion_constante
  189                   | objeto
  190                   | llamada_subprograma
  191                   | '(' expresion ')'

  192 expresion_unitaria: '-' expresion_primaria
  193                   | expresion_primaria

  194 expresion_potencia: expresion_unitaria POTENCIA expresion_potencia
  195                   | expresion_unitaria

  196 expresion_prod: expresion_prod '*' expresion_potencia
  197               | expresion_prod '/' expresion_potencia
  198               | expresion_prod '%' expresion_potencia
  199               | expresion_potencia

  200 expresion_sum: expresion_sum '+' expresion_prod
  201              | expresion_sum '-' expresion_prod
  202              | expresion_prod

  203 expresion_desplz: expresion_desplz DESPI expresion_sum
  204                 | expresion_desplz DESPD expresion_sum
  205                 | expresion_sum

  206 expresion_and_bin: expresion_and_bin '&' expresion_desplz
  207                  | expresion_desplz

  208 expresion_or_bin: expresion_or_bin '^' expresion_and_bin
  209                 | expresion_and_bin

  210 expresion_xor_bin: expresion_xor_bin '@' expresion_desplz
  211                  | expresion_or_bin

  212 expresion_comparar: expresion_comparar '<' expresion_xor_bin
  213                   | expresion_comparar '>' expresion_xor_bin
  214                   | expresion_comparar LEQ expresion_xor_bin
  215                   | expresion_comparar GEQ expresion_xor_bin
  216                   | expresion_comparar EQ expresion_xor_bin
  217                   | expresion_comparar NEQ expresion_xor_bin
  218                   | expresion_xor_bin

  219 expresion_negacion: '!' expresion_negacion
  220                   | expresion_comparar

  221 expresion_and_logico: expresion_and_logico AND expresion_negacion
  222                     | expresion_negacion

  223 expresion_or_logico: expresion_or_logico OR expresion_and_logico
  224                    | expresion_and_logico

  225 expresion: expresion_or_logico


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 219
'%' (37) 198
'&' (38) 206
'(' (40) 24 25 49 50 94 95 133 155 191
')' (41) 24 25 49 50 94 95 133 155 191
'*' (42) 196
'+' (43) 200
',' (44) 20 26 52 56 76 78 80 114 156
'-' (45) 192 201
'.' (46) 182
'/' (47) 197
':' (58) 64 65 70 84 85 86 87 88 89 112 136 137
';' (59) 3 4 9 14 18 32 64 65 70 84 85 86 87 88 89 108 109 112 126
    127 135 139 149 150 151 152 153 154 160 179
'<' (60) 212
'=' (61) 32 33 70 84 86 88 149
'>' (62) 213
'@' (64) 210
'[' (91) 55 72 73 74 75 181
']' (93) 55 72 73 74 75 181
'^' (94) 208
'{' (123) 10 11 62 63 93 94 95 96
'|' (124) 165
'}' (125) 10 11 62 63 93 94 95 96
error (256) 4 9 11 25 50 63 75 88 89
ABSTRACTO (258) 117
AND (259) 221
ASOCIATIVA (260) 60
BOOLEANO (261) 45
CABECERA (262) 15
CADENA (263) 47
CASO (264) 160
CARACTER (265) 46
CARGA (266) 18
CLASE (267) 93 94 95 96
CONJUNTO (268) 61
CONSTANTE (269) 67 111
CUERPO (270) 16
CTC_BOOLEANA (271) 187
CTC_CADENA (272) 78 79 185
CTC_CARACTER (273) 186
CTC_ENTERA (274) 183
CTC_REAL (275) 184
CONSTRUCTOR (276) 130
CUANDO (277) 177 178
CUATRO_PTOS (278) 7
DESCENDENTE (279) 171
DESPD (280) 204
DESPI (281) 203
DESTRUCTOR (282) 131
DE (283) 53 60 61
DEVOLVER (284) 152 153
DOS_PTOS (285) 58 59
EJECUTA (286) 177 178
ELEMENTO (287) 171 172
EN (288) 22 160 170 171 172
ENTERO (289) 43
ENTONCES (290) 158 159
EQ (291) 216
ESPECIFICO (292) 118
EXCEPTO (293) 175 176
FICHERO (294) 48
FINAL (295) 93 94 119
FINALMENTE (296) 175
FLECHA_DOBLE (297) 78 79 80 81 128 161 162
FUNCION (298) 128
GEQ (299) 215
GENERICO (300) 116
HASTA (301) 174
IDENTIFICADOR (302) 5 7 182
INTERFAZ (303) 90
LANZAR (304) 179
LEQ (305) 214
LISTA (306) 53 60
MIENTRAS (307) 173
MODIFICABLE (308) 136
NEQ (309) 217
OTRO (310) 168
OR (311) 223
PAQUETE (312) 14
PARA (313) 170
PATH (314) 22
POTENCIA (315) 194
PRIVADO (316) 102
PROBAR (317) 175 176
PROCEDIMIENTO (318) 129
PROGRAMA (319) 3
PUBLICO (320) 97
REAL (321) 44
REGISTRO (322) 62
REPITE (323) 171 172 174
SEA (324) 160
SALIR (325) 150 151
SEMIPUBLICO (326) 100
SI (327) 150 158 159
SINO (328) 158
TIPO (329) 29 110
VARIABLE (330) 83


No terminales con las reglas donde aparecen

$accept (99)
    en la izquierda: 0
programa (100)
    en la izquierda: 1 2, en la derecha: 0
definicion_programa (101)
    en la izquierda: 3 4, en la derecha: 1
nombre (102)
    en la izquierda: 5, en la derecha: 3 14 19 20 26 27 32 33 34 70
    80 81 128 129 130 131 155 170 171 172 177 178 179 180
id_op (103)
    en la izquierda: 6 7, en la derecha: 5 7
bloque_programa (104)
    en la izquierda: 8 9, en la derecha: 3
bloque_instrucciones (105)
    en la izquierda: 10 11, en la derecha: 8 138 158 159 161 162 169
    175 176 177 178
instruccion_unoomas (106)
    en la izquierda: 12 13, en la derecha: 10 12
definicion_paquete (107)
    en la izquierda: 14, en la derecha: 2
seccion_cabecera (108)
    en la izquierda: 15, en la derecha: 14
seccion_cuerpo (109)
    en la izquierda: 16, en la derecha: 14
declaracion_cargas (110)
    en la izquierda: 17 18, en la derecha: 8 15
declaracion_carga (111)
    en la izquierda: 19 20, en la derecha: 18 20
en_path_op (112)
    en la izquierda: 21 22, en la derecha: 19 20
nombres_op (113)
    en la izquierda: 23 24 25, en la derecha: 19 20
nombres_comas (114)
    en la izquierda: 26 27, en la derecha: 24 26 64 65 84 85 86 87
    88 89 94 95 112 136 137
declaracion_tipos (115)
    en la izquierda: 28 29, en la derecha: 8 15 16 138
declaracion_tipo_unoomas (116)
    en la izquierda: 30 31, en la derecha: 29 30
declaracion_tipo (117)
    en la izquierda: 32 33, en la derecha: 30 31 110
tipo_no_estructurado_o_nombre_tipo (118)
    en la izquierda: 34 35 36 37 38 39 40, en la derecha: 32 53 60
    61 64 65 70 84 85 86 87 112 128 136 137
tipo_estructurado (119)
    en la izquierda: 41 42, en la derecha: 33
tipo_escalar (120)
    en la izquierda: 43 44 45 46 47, en la derecha: 35
tipo_fichero (121)
    en la izquierda: 48, en la derecha: 36
tipo_enumerado (122)
    en la izquierda: 49 50, en la derecha: 37
expresion_constante_unoomas (123)
    en la izquierda: 51 52, en la derecha: 49 52
tipo_lista (124)
    en la izquierda: 53, en la derecha: 38
rango_lista_op (125)
    en la izquierda: 54 55, en la derecha: 53
rango_lista (126)
    en la izquierda: 56 57, en la derecha: 55 56
rango (127)
    en la izquierda: 58 59, en la derecha: 56 57 167 171 172
tipo_lista_asociativa (128)
    en la izquierda: 60, en la derecha: 39
tipo_conjunto (129)
    en la izquierda: 61, en la derecha: 40
tipo_registro (130)
    en la izquierda: 62 63, en la derecha: 41
declaracion_campo (131)
    en la izquierda: 64 65, en la derecha: 62 64
declaracion_constantes (132)
    en la izquierda: 66 67, en la derecha: 8 15 16 138
declaracion_constante_unoomas (133)
    en la izquierda: 68 69, en la derecha: 67 68
declaracion_constante (134)
    en la izquierda: 70, en la derecha: 68 69 111
valor_constante (135)
    en la izquierda: 71 72 73 74 75, en la derecha: 70 76 77 78 79
    80 81 84 86 88
valor_constante_comas (136)
    en la izquierda: 76 77, en la derecha: 72 76
clave_valor (137)
    en la izquierda: 78 79, en la derecha: 73 78
campo_valor (138)
    en la izquierda: 80 81, en la derecha: 74 80
declaracion_variables (139)
    en la izquierda: 82 83, en la derecha: 8 15 16 138
declaracion_variable (140)
    en la izquierda: 84 85 86 87 88 89, en la derecha: 83 84 85
declaracion_interfaces (141)
    en la izquierda: 90, en la derecha: 15
declaracion_clase (142)
    en la izquierda: 91 92, en la derecha: 42
declaracion_clase_mod (143)
    en la izquierda: 93 94, en la derecha: 91
declaracion_clase_nomod (144)
    en la izquierda: 95 96, en la derecha: 92
declaraciones_publicas (145)
    en la izquierda: 97 98, en la derecha: 93 94 95 96
declaraciones_semi (146)
    en la izquierda: 99 100, en la derecha: 93 94 95 96
declaraciones_privadas (147)
    en la izquierda: 101 102, en la derecha: 93 94 95 96
declaracion_componente_unoomas (148)
    en la izquierda: 103 104, en la derecha: 97 98 100 102 104
declaracion_componente (149)
    en la izquierda: 105 106 107 108 109, en la derecha: 103 104
declaracion_tipo_anidado (150)
    en la izquierda: 110, en la derecha: 105
declaracion_constante_anidada (151)
    en la izquierda: 111, en la derecha: 106
declaracion_atributos (152)
    en la izquierda: 112, en la derecha: 107
modificadores (153)
    en la izquierda: 113, en la derecha: 108
modificador_comas (154)
    en la izquierda: 114 115, en la derecha: 113 114
modificador (155)
    en la izquierda: 116 117 118 119, en la derecha: 114 115
declaracion_subprograma (156)
    en la izquierda: 120 121, en la derecha: 16 120
cabecera_subprograma (157)
    en la izquierda: 122 123 124 125, en la derecha: 108 109 120 121
    126 127
cabecera_subprograma_unoomas_ptocoma (158)
    en la izquierda: 126 127, en la derecha: 90 126
cabecera_funcion (159)
    en la izquierda: 128, en la derecha: 122
cabecera_procedimiento (160)
    en la izquierda: 129, en la derecha: 123
cabecera_constructor (161)
    en la izquierda: 130, en la derecha: 124
cabecera_destructor (162)
    en la izquierda: 131, en la derecha: 125
declaracion_parametros (163)
    en la izquierda: 132 133, en la derecha: 128 129 130
lista_parametros_formales (164)
    en la izquierda: 134 135, en la derecha: 133 135
parametros_formales (165)
    en la izquierda: 136 137, en la derecha: 134 135
bloque_subprograma (166)
    en la izquierda: 138, en la derecha: 120 121
instruccion (167)
    en la izquierda: 139 140 141 142 143 144 145 146 147 148, en la derecha:
    12 13
instruccion_asignacion (168)
    en la izquierda: 149, en la derecha: 140
instruccion_salir (169)
    en la izquierda: 150 151, en la derecha: 141
instruccion_devolver (170)
    en la izquierda: 152 153, en la derecha: 142
instruccion_llamada (171)
    en la izquierda: 154, en la derecha: 143
llamada_subprograma (172)
    en la izquierda: 155, en la derecha: 154 190
expresion_comas (173)
    en la izquierda: 156 157, en la derecha: 155 156 181
instruccion_si (174)
    en la izquierda: 158 159, en la derecha: 144
instruccion_casos (175)
    en la izquierda: 160, en la derecha: 145
caso (176)
    en la izquierda: 161 162, en la derecha: 160 161
entradas (177)
    en la izquierda: 163, en la derecha: 161 162
entrada_op (178)
    en la izquierda: 164 165, en la derecha: 163 165
entrada (179)
    en la izquierda: 166 167 168, en la derecha: 163 165
instruccion_bucle (180)
    en la izquierda: 169, en la derecha: 146
clausula_iteracion (181)
    en la izquierda: 170 171 172 173 174, en la derecha: 169
instruccion_probar_excepto (182)
    en la izquierda: 175 176, en la derecha: 147
clausula_excepcion (183)
    en la izquierda: 177 178, en la derecha: 175 176 177
instruccion_lanzar (184)
    en la izquierda: 179, en la derecha: 148
objeto (185)
    en la izquierda: 180 181 182, en la derecha: 149 170 181 182 189
expresion_constante (186)
    en la izquierda: 183 184 185 186 187, en la derecha: 51 52 188
expresion_primaria (187)
    en la izquierda: 188 189 190 191, en la derecha: 192 193
expresion_unitaria (188)
    en la izquierda: 192 193, en la derecha: 194 195
expresion_potencia (189)
    en la izquierda: 194 195, en la derecha: 194 196 197 198 199
expresion_prod (190)
    en la izquierda: 196 197 198 199, en la derecha: 196 197 198 200
    201 202
expresion_sum (191)
    en la izquierda: 200 201 202, en la derecha: 200 201 203 204 205
expresion_desplz (192)
    en la izquierda: 203 204 205, en la derecha: 203 204 206 207 210
expresion_and_bin (193)
    en la izquierda: 206 207, en la derecha: 206 208 209
expresion_or_bin (194)
    en la izquierda: 208 209, en la derecha: 208 211
expresion_xor_bin (195)
    en la izquierda: 210 211, en la derecha: 210 212 213 214 215 216
    217 218
expresion_comparar (196)
    en la izquierda: 212 213 214 215 216 217 218, en la derecha: 212
    213 214 215 216 217 220
expresion_negacion (197)
    en la izquierda: 219 220, en la derecha: 219 221 222
expresion_and_logico (198)
    en la izquierda: 221 222, en la derecha: 221 223 224
expresion_or_logico (199)
    en la izquierda: 223 224, en la derecha: 223 225
expresion (200)
    en la izquierda: 225, en la derecha: 58 59 71 149 150 152 156 157
    158 159 160 166 173 174 191


estado 0

    0 $accept: . programa $end

    error     desplazar e ir al estado 1
    PAQUETE   desplazar e ir al estado 2
    PROGRAMA  desplazar e ir al estado 3

    programa             ir al estado 4
    definicion_programa  ir al estado 5
    definicion_paquete   ir al estado 6


estado 1

    4 definicion_programa: error . ';'

    ';'  desplazar e ir al estado 7


estado 2

   14 definicion_paquete: PAQUETE . nombre ';' seccion_cabecera seccion_cuerpo

    $default  reduce usando la regla 6 (id_op)

    nombre  ir al estado 8
    id_op   ir al estado 9


estado 3

    3 definicion_programa: PROGRAMA . nombre ';' bloque_programa

    $default  reduce usando la regla 6 (id_op)

    nombre  ir al estado 10
    id_op   ir al estado 9


estado 4

    0 $accept: programa . $end

    $end  desplazar e ir al estado 11


estado 5

    1 programa: definicion_programa .

    $default  reduce usando la regla 1 (programa)


estado 6

    2 programa: definicion_paquete .

    $default  reduce usando la regla 2 (programa)


estado 7

    4 definicion_programa: error ';' .

    $default  reduce usando la regla 4 (definicion_programa)


estado 8

   14 definicion_paquete: PAQUETE nombre . ';' seccion_cabecera seccion_cuerpo

    ';'  desplazar e ir al estado 12


estado 9

    5 nombre: id_op . IDENTIFICADOR
    7 id_op: id_op . IDENTIFICADOR CUATRO_PTOS

    IDENTIFICADOR  desplazar e ir al estado 13


estado 10

    3 definicion_programa: PROGRAMA nombre . ';' bloque_programa

    ';'  desplazar e ir al estado 14


estado 11

    0 $accept: programa $end .

    $default  aceptar


estado 12

   14 definicion_paquete: PAQUETE nombre ';' . seccion_cabecera seccion_cuerpo

    CABECERA  desplazar e ir al estado 15

    seccion_cabecera  ir al estado 16


estado 13

    5 nombre: id_op IDENTIFICADOR .
    7 id_op: id_op IDENTIFICADOR . CUATRO_PTOS

    CUATRO_PTOS  desplazar e ir al estado 17

    $default  reduce usando la regla 5 (nombre)


estado 14

    3 definicion_programa: PROGRAMA nombre ';' . bloque_programa

    error  desplazar e ir al estado 18
    CARGA  desplazar e ir al estado 19

    CONSTANTE  reduce usando la regla 17 (declaracion_cargas)
    TIPO       reduce usando la regla 17 (declaracion_cargas)
    VARIABLE   reduce usando la regla 17 (declaracion_cargas)
    '{'        reduce usando la regla 17 (declaracion_cargas)

    bloque_programa     ir al estado 20
    declaracion_cargas  ir al estado 21


estado 15

   15 seccion_cabecera: CABECERA . declaracion_cargas declaracion_tipos declaracion_constantes declaracion_variables declaracion_interfaces

    CARGA  desplazar e ir al estado 19

    $default  reduce usando la regla 17 (declaracion_cargas)

    declaracion_cargas  ir al estado 22


estado 16

   14 definicion_paquete: PAQUETE nombre ';' seccion_cabecera . seccion_cuerpo

    CUERPO  desplazar e ir al estado 23

    seccion_cuerpo  ir al estado 24


estado 17

    7 id_op: id_op IDENTIFICADOR CUATRO_PTOS .

    $default  reduce usando la regla 7 (id_op)


estado 18

    9 bloque_programa: error . ';'

    ';'  desplazar e ir al estado 25


estado 19

   18 declaracion_cargas: CARGA . declaracion_carga ';'

    $default  reduce usando la regla 6 (id_op)

    nombre             ir al estado 26
    id_op              ir al estado 9
    declaracion_carga  ir al estado 27


estado 20

    3 definicion_programa: PROGRAMA nombre ';' bloque_programa .

    $default  reduce usando la regla 3 (definicion_programa)


estado 21

    8 bloque_programa: declaracion_cargas . declaracion_tipos declaracion_constantes declaracion_variables bloque_instrucciones

    TIPO  desplazar e ir al estado 28

    $default  reduce usando la regla 28 (declaracion_tipos)

    declaracion_tipos  ir al estado 29


estado 22

   15 seccion_cabecera: CABECERA declaracion_cargas . declaracion_tipos declaracion_constantes declaracion_variables declaracion_interfaces

    TIPO  desplazar e ir al estado 28

    $default  reduce usando la regla 28 (declaracion_tipos)

    declaracion_tipos  ir al estado 30


estado 23

   16 seccion_cuerpo: CUERPO . declaracion_tipos declaracion_constantes declaracion_variables declaracion_subprograma

    TIPO  desplazar e ir al estado 28

    $default  reduce usando la regla 28 (declaracion_tipos)

    declaracion_tipos  ir al estado 31


estado 24

   14 definicion_paquete: PAQUETE nombre ';' seccion_cabecera seccion_cuerpo .

    $default  reduce usando la regla 14 (definicion_paquete)


estado 25

    9 bloque_programa: error ';' .

    $default  reduce usando la regla 9 (bloque_programa)


estado 26

   19 declaracion_carga: nombre . en_path_op nombres_op

    EN  desplazar e ir al estado 32

    $default  reduce usando la regla 21 (en_path_op)

    en_path_op  ir al estado 33


estado 27

   18 declaracion_cargas: CARGA declaracion_carga . ';'
   20 declaracion_carga: declaracion_carga . ',' nombre en_path_op nombres_op

    ';'  desplazar e ir al estado 34
    ','  desplazar e ir al estado 35


estado 28

   29 declaracion_tipos: TIPO . declaracion_tipo_unoomas

    $default  reduce usando la regla 6 (id_op)

    nombre                    ir al estado 36
    id_op                     ir al estado 9
    declaracion_tipo_unoomas  ir al estado 37
    declaracion_tipo          ir al estado 38


estado 29

    8 bloque_programa: declaracion_cargas declaracion_tipos . declaracion_constantes declaracion_variables bloque_instrucciones

    CONSTANTE  desplazar e ir al estado 39

    $default  reduce usando la regla 66 (declaracion_constantes)

    declaracion_constantes  ir al estado 40


estado 30

   15 seccion_cabecera: CABECERA declaracion_cargas declaracion_tipos . declaracion_constantes declaracion_variables declaracion_interfaces

    CONSTANTE  desplazar e ir al estado 39

    $default  reduce usando la regla 66 (declaracion_constantes)

    declaracion_constantes  ir al estado 41


estado 31

   16 seccion_cuerpo: CUERPO declaracion_tipos . declaracion_constantes declaracion_variables declaracion_subprograma

    CONSTANTE  desplazar e ir al estado 39

    $default  reduce usando la regla 66 (declaracion_constantes)

    declaracion_constantes  ir al estado 42


estado 32

   22 en_path_op: EN . PATH

    PATH  desplazar e ir al estado 43


estado 33

   19 declaracion_carga: nombre en_path_op . nombres_op

    '('  desplazar e ir al estado 44

    $default  reduce usando la regla 23 (nombres_op)

    nombres_op  ir al estado 45


estado 34

   18 declaracion_cargas: CARGA declaracion_carga ';' .

    $default  reduce usando la regla 18 (declaracion_cargas)


estado 35

   20 declaracion_carga: declaracion_carga ',' . nombre en_path_op nombres_op

    $default  reduce usando la regla 6 (id_op)

    nombre  ir al estado 46
    id_op   ir al estado 9


estado 36

   32 declaracion_tipo: nombre . '=' tipo_no_estructurado_o_nombre_tipo ';'
   33                 | nombre . '=' tipo_estructurado

    '='  desplazar e ir al estado 47


estado 37

   29 declaracion_tipos: TIPO declaracion_tipo_unoomas .
   30 declaracion_tipo_unoomas: declaracion_tipo_unoomas . declaracion_tipo

    IDENTIFICADOR  reduce usando la regla 6 (id_op)
    $default       reduce usando la regla 29 (declaracion_tipos)

    nombre            ir al estado 36
    id_op             ir al estado 9
    declaracion_tipo  ir al estado 48


estado 38

   31 declaracion_tipo_unoomas: declaracion_tipo .

    $default  reduce usando la regla 31 (declaracion_tipo_unoomas)


estado 39

   67 declaracion_constantes: CONSTANTE . declaracion_constante_unoomas

    $default  reduce usando la regla 6 (id_op)

    nombre                         ir al estado 49
    id_op                          ir al estado 9
    declaracion_constante_unoomas  ir al estado 50
    declaracion_constante          ir al estado 51


estado 40

    8 bloque_programa: declaracion_cargas declaracion_tipos declaracion_constantes . declaracion_variables bloque_instrucciones

    VARIABLE  desplazar e ir al estado 52

    $default  reduce usando la regla 82 (declaracion_variables)

    declaracion_variables  ir al estado 53


estado 41

   15 seccion_cabecera: CABECERA declaracion_cargas declaracion_tipos declaracion_constantes . declaracion_variables declaracion_interfaces

    VARIABLE  desplazar e ir al estado 52

    $default  reduce usando la regla 82 (declaracion_variables)

    declaracion_variables  ir al estado 54


estado 42

   16 seccion_cuerpo: CUERPO declaracion_tipos declaracion_constantes . declaracion_variables declaracion_subprograma

    VARIABLE  desplazar e ir al estado 52

    $default  reduce usando la regla 82 (declaracion_variables)

    declaracion_variables  ir al estado 55


estado 43

   22 en_path_op: EN PATH .

    $default  reduce usando la regla 22 (en_path_op)


estado 44

   24 nombres_op: '(' . nombres_comas ')'
   25           | '(' . error ')'

    error  desplazar e ir al estado 56

    IDENTIFICADOR  reduce usando la regla 6 (id_op)

    nombre         ir al estado 57
    id_op          ir al estado 9
    nombres_comas  ir al estado 58


estado 45

   19 declaracion_carga: nombre en_path_op nombres_op .

    $default  reduce usando la regla 19 (declaracion_carga)


estado 46

   20 declaracion_carga: declaracion_carga ',' nombre . en_path_op nombres_op

    EN  desplazar e ir al estado 32

    $default  reduce usando la regla 21 (en_path_op)

    en_path_op  ir al estado 59


estado 47

   32 declaracion_tipo: nombre '=' . tipo_no_estructurado_o_nombre_tipo ';'
   33                 | nombre '=' . tipo_estructurado
